working on readme doc. Also found a small height bug on the boddy. Removed the 100vh so it didnt collapse the padding around the form

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -19,8 +19,8 @@ body {
   box-sizing: border-box;
   overflow-x: hidden;
   background-color: #e0f1e8;
-  height: 100vh;
-  padding: 128px 16px; //Need to address in mobile
+  //   height: fit-content;
+  padding: $spacing-1600 $spacing-200; //Need to address in mobile
 
   display: flex;
   //   justify-content: center;
@@ -30,7 +30,7 @@ body {
   position: relative;
 
   @include respond(phone) {
-    padding: 32px 16px;
+    padding: $spacing-400 $spacing-200;
   }
 }
 input,
