--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -14,7 +14,7 @@
   &__fields {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: $spacing-300;
     width: 100%;
   }
 
@@ -23,7 +23,7 @@
     font-weight: 700;
     letter-spacing: -1px;
     line-height: 100%;
-    padding-bottom: 40px;
+    padding-bottom: $spacing-500;
   }
 
   &__label {
@@ -65,7 +65,7 @@
     border: 1px solid $color-grey-500;
     width: 100%;
     height: 132px;
-    padding: 10px;
+    padding: $spacing-150;
 
     // height: 600px;
     resize: vertical;
@@ -104,7 +104,7 @@
 
   &__submit-btn {
     display: flex;
-    padding: 16px 40px;
+    padding: $spacing-200 $spacing-500;
     align-self: stretch;
     justify-content: center;
 
@@ -138,7 +138,7 @@
 
 .form__input {
   font-size: 1.8rem;
-  padding: 12px 24px;
+  padding: $spacing-150 $spacing-300;
 
   border-radius: 8px;
   border: 1px solid $color-grey-500;
@@ -158,7 +158,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 8px;
+    gap: $spacing-100;
     width: 100%;
     &:focus-within {
       color: $color-green-600;
@@ -171,7 +171,7 @@
     &--half {
       display: flex;
       flex-wrap: wrap;
-      gap: 16px;
+      gap: $spacing-200;
       width: 100%;
     }
   }
@@ -180,7 +180,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 8px;
+    gap: $spacing-100;
 
     align-self: stretch;
     flex: 1 1 48%;
@@ -198,11 +198,11 @@
 
   &-radio {
     display: flex;
-    padding: 12px 24px;
+    padding: $spacing-150 $spacing-300;
     border-radius: 8px;
     border: 1px solid $color-grey-500;
 
-    gap: 12px;
+    gap: $spacing-150;
 
     flex: 1 1 48%;
     min-width: 225px;
@@ -226,9 +226,9 @@
   &-consent {
     display: flex;
     flex-wrap: wrap;
-    padding: 40px 0;
+    padding: $spacing-500 0;
     font-size: 1.6rem;
     line-height: 150%;
-    column-gap: 16px;
+    column-gap: $spacing-200;
   }
 }
