--- a/sass/main.css
+++ b/sass/main.css
@@ -18,7 +18,6 @@ body {
   box-sizing: border-box;
   overflow-x: hidden;
   background-color: #e0f1e8;
-  height: 100vh;
   padding: 128px 16px;
   display: flex;
   align-items: center;
@@ -119,7 +118,7 @@ textarea {
   border: 1px solid hsl(186, 15%, 59%);
   width: 100%;
   height: 132px;
-  padding: 10px;
+  padding: 12px;
   resize: vertical;
 }
 .form__text-area:hover, .form__text-area:focus {
